# neural-operator-view-on-unets

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO.md  environment.yml  logging.conf  pyproject.toml  pyrightconfig.json  requirements.txt  requirements.txt.conda  ruff.toml  runs
fno_unet/: classical_unet.py  covariance.py  ct_dataset.py  dataset.ipynb  ellipses_dataset.py  fno_unet.py  fno_utils.py  interp_unet.py  noise_filter.py  noisefilter.ipynb  radon_operator.py  train.py  unet.py  unet2.py
fun/: __main__.py  ct_dataset.py  differential_unet.py  ellipses_dataset.py  fno_unet.py  formatters.py  gen_test_data.py  interp_unet.py  radon_operator.py  train.py
fun/data/: ct_dataset.py  ellipses_dataset.py  gen_data.py  gen_test_data.py  multi_res_batch_sampler.py
fun/models/: classical_unet.py  custom_unet.py  differential_unet.py  dncnn.py  flexi_unet.py  fno_unet.py  interp_unet.py  spectral_unet.py  unet_base.py
fun/utils/: diff_utils.py  fno_utils.py  interp_utils.py
notebooks/: 1d_interpolating_kernel.ipynb  FNOUNet_firsttries.ipynb  dataset.ipynb  debug.ipynb  finalRuns.ipynb  noise_filter.ipynb  size.ipynb  sweeps.ipynb  unet2fno.ipynb  unet2interp.ipynb
scripts/: omni.debug.sh  omni.interactive.sh  omni.run.sh  omni.submit-all.sh  omni.submit-final-again.sh  omni.submit-final.sh  omni.submit-final.sh.old  omni.submit-final.train.sh  omni.submit.sh  omni.submit2.sh  omni.submit3.sh
scripts/desy_scripts/: sweeps_noresize.sh  sweeps_resize.sh  train_cno.sh  train_diffnet.sh  train_fno.sh  train_ufno.sh  train_unet.sh  train_uno.sh
