[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core~=2.1"]

[project]
name = "fno_unet"
version = "1.0.0"
authors = [{ name = "Alexander Auras", email = "33501357+AlexanderAuras@users.noreply.github.com" }, { name = "Samira Kabri", email = "noreply@example.com" }]
description = "UNets using fourier neural operators."
keywords = ["neural networks", "neural operators"]
# license = ""
# license-files = [ "LICENSE" ]
readme = "README.md"
requires-python = "~=3.11.0"
dynamic = [ "classifiers" ]

#[project.urls]
#homepage = ""
#paper = ""
#source = ""
#issues = ""

#[project.scripts]
#ipnas = "fno_unet.__main__:main"

[tool.poetry.dependencies]
torch = { version = "2.0.0", source = "torch-cuda" }
astra-toolbox = "2.3.0"
datasets = "^3.2.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
graphviz = "^0.20.3"
matplotlib = "^3.10.1"
numpy = "^1.26.0"
onnx = "^1.17.0"
tensorboard = "^2.19.0"
torchview = "^0.2.6"
torchinfo = "^1.8.0"
torchvision = "0.15.1"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.397"
black = "^25.1.0"
debugpy = "^1.8.13"
ruff = "^0.11.2"

[tool.poetry]
requires-poetry = "~=2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

[tool.black]
include = "fno_unet/.*\\.py"
line-length = 200
